banner image added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" <title>Web Developer Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Developer Portfolio</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +15,9 @@
 
 </head>
 
+
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Shamsuddin<span class="text-primary">m</span>st</h3>
             <ul>
@@ -24,6 +26,24 @@
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-title">Shamsuddin Mst</h1>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam vel harum, nulla, quaerat aut
+                    eum, alias id maiores laudantium libero natus! Dolore, laboriosam nihil. Quis accusamus mollitia ad
+                    odio facere.
+                </p>
+
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+
+            <img class="profile-pic" src="images/hardy.png" alt="">
+
+        </div>
 
     </header>
     <main>
