banner content added

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="banner">
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I am</h3>
-                <h1 class="banner-title">Shamsuddin Mst</h1>
-                <p>
+                <h1 class="banner-title">ShamsuddinMst</h1>
+                <p class="banner-description">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam vel harum, nulla, quaerat aut
                     eum, alias id maiores laudantium libero natus! Dolore, laboriosam nihil. Quis accusamus mollitia ad
                     odio facere.
