about section added

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
 
     </header>
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I m a designer & Developer With a passion for web design. O enjoy developing simple,
+                clean and slick websites that provide real value to the wnd user. Thousands of clients have .
+            </p>
+        </section>
 
     </main>
 
