--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
                 I m a designer & Developer With a passion for web design. O enjoy developing simple,
                 clean and slick websites that provide real value to the wnd user. Thousands of clients have .
             </p>
+            <div class="about-contener">
+                <div class="about-contens">
+                    <h4 class="about-title">Name:</h4>
+                    <h6 class="about-subtitle">Shamsuddin mst</h6>
+                </div>
+                <div class="about-contens">
+                    <h4 class="about-title">Email:</h4>
+                    <h6 class="about-subtitle">mstuhin@gmail.com</h6>
+                </div>
+                <div class="about-contens">
+                    <h4 class="about-title">Date Of birth:</h4>
+                    <h6 class="about-subtitle">02/02/2002</h6>
+                </div>
+                <div class="about-contens">
+                    <h4 class="about-title">Form:</h4>
+                    <h6 class="about-subtitle">Gazipur</h6>
+                </div>
+            </div>
         </section>
 
     </main>
