--- a/index.html
+++ b/index.html
@@ -73,6 +73,44 @@
             </div>
         </section>
 
+        <!-- what i do section start -->
+
+        <section>
+            <h3 class="what-title">What I Do</h3>
+            <p id="what-i-do-descripption" class="section-description">
+                I have more than 10 years experience Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                officiis aspernatur beatae debitis ullam, quos commodi reiciendis sed fuga a!
+            </p>
+
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla javascript</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+                        veniam, et corporis quis deserunt praesentium.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid
+                        numquam, provident dolorum quisquam suscipit laboriosam!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Nodejs</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+                        voluptatibus officiis minima. Repellendus, quos cupiditate!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+                        corporis, ea libero earum mollitia in!</p>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
 
