--- a/index.html
+++ b/index.html
@@ -111,6 +111,69 @@
 
         </section>
 
+        <!-- Resume section -->
+        <section class="resume-section">
+            <h3 class="section-title">A summary of my Resume </h3>
+
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="education-container">
+                        <h4 class="education-title">Master In Computer Engineering</h4>
+                        <h5 class="education-subtitle">Harvard university /2020-2022</h5>
+                        <p class="education-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+                            animi est quam quae aliquam cumque.</p>
+                    </div>
+                    <hr>
+                    <div class="education-container">
+                        <h4 class="education-title">Master In Computer Engineering</h4>
+                        <h5 class="education-subtitle">Harvard University /2023-2024</h5>
+                        <p class="education-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                            ut porro aliquam illo reiciendis nesciunt?</p>
+                    </div>
+                    <hr>
+                    <div class="education-container">
+                        <h4 class="education-title">Master In Computer Engineering</h4>
+                        <h5 class="education-subtitle">Harvard University /2022-2023</h5>
+                        <p class="education-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                            dolore saepe odio eligendi quasi? Tempora.</p>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience-container">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <h5 class="experience-subtitle">Apple inc /2004/2022</h5>
+                        <p class="experience-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Sequi assumenda laudantium rerum magnam, culpa labore.</p>
+                    </div>
+                    <hr>
+                    <div class="experience-container">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experience-subtitle">Dribble in /2005/20223</h5>
+                        <p class="experience-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                            repudiandae aliquid aliquam nihil nam veniam.</p>
+                    </div>
+                    <hr>
+                    <div class="experience-container">
+                        <h4 class="experience-title">HTML Developer</h4>
+                        <h5 class="experience-subtitle">Dribble in /2021-2023</h5>
+                        <p class="experience-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Ducimus, deserunt quidem soluta assumenda eaque at!</p>
+                    </div>
+
+
+                </div>
+
+            </div>
+            <div class="download-cv">
+                <button class="btn-primary" id="btn-download">Download CV</button>
+            </div>
+
+        </section>
+
+
+
     </main>
 
 
