--- a/index.html
+++ b/index.html
@@ -178,6 +178,25 @@
 
 
     <footer>
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-description">Lorem ipsum, dolor sit amet consectetur
+                adipisicing elit. Non, porro?</p>
+            <div class="social-links">
+                <a href=""><img src="images/icons/facebook.png" alt="">
+                </a><a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="your name ">
+                <input type="email" name="" placeholder="your email" id="">
+                <textarea name="" id=""></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
+        </div>
 
     </footer>
 
